Fix drawer buttons on mobile

--- a/static/app.css
+++ b/static/app.css
@@ -163,6 +163,15 @@ html {
   transition: 0.3s;
 }
 
+.drawer .drawer-btn {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: white;
+  display: block;
+  transition: 0.3s;
+}
+
 .drawer a:hover {
   color: #f1f1f1;
 }
@@ -173,6 +182,8 @@ html {
   right: 25px;
   font-size: 36px;
   margin-left: 50px;
+  color: white;
+  cursor: pointer;
 }
 
 @media screen and (max-height: 650px) {
